Fix the nav links cursor and z-index of blob container

--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -7,6 +7,7 @@
   height: 46px;
   letter-spacing: -1.523px;
   padding: 1rem;
+  cursor: pointer;
 }
 
 .navNumber {
