--- a/src/index.scss
+++ b/src/index.scss
@@ -33,7 +33,7 @@ body {
   display: flex;
   justify-content: center;
   min-height: 100vh;
-  background-color: #030202;
+  // background-color: #030202;
   color: white;
 }
 
